unpackaged/main/default/objects/NLM_Tree__c/NLM_Tree__c.object-meta.xml
<CustomObject>
    <label>NLM Tree</label>
    <nameField>
        <displayFormat>NTID-{0000}</displayFormat>
        <label>NLM Tree ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NLM Trees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>