unpackaged/main/default/objects/NLM_Tree__c/fields/NLM_Condition__c.field-meta.xml
<CustomField>
    <fullName>NLM_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NLM Condition</label>
    <referenceTo>NLM_Condition__c</referenceTo>
    <relationshipLabel>NLM Trees</relationshipLabel>
    <relationshipName>NLM_Trees</relationshipName>
    <type>Lookup</type>
</CustomField>