unpackaged/main/default/objects/NLM_Tree__c/fields/Parent_Tree__c.field-meta.xml
<CustomField>
    <fullName>Parent_Tree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Tree</label>
    <referenceTo>NLM_Tree__c</referenceTo>
    <relationshipLabel>NLM Trees</relationshipLabel>
    <relationshipName>NLM_Trees</relationshipName>
    <type>Lookup</type>
</CustomField>