unpackaged/main/default/objects/NLM_Tree__c/fields/Tree_Number__c.field-meta.xml
<CustomField>
    <fullName>Tree_Number__c</fullName>
    <externalId>true</externalId>
    <label>Tree Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>